--- a/exercise3.html
+++ b/exercise3.html
@@ -7,14 +7,22 @@
     
 </head>
 <body>
-    <div class="flex-container">
-
-        <a class="flex-item" href="https://schulich.ucalgary.ca">SCHULICH School of Engineering</a>
-        <a class="flex-item" href="https://www.ucalgary.ca/future -students/undergraduate/explore-programs/electrical-engineering">Electrical Engineering</a>
-        <a class="flex-item" href="https://schulich.ucalgary.ca/chemical-petroleum/home">Chemical Engineering Department</a>
-        <a class="flex-item" href="https://schulich.ucalgary.ca/biomedical/home">Biomedical Engineering Department</a>
-        <a class="flex-item" href="https://schulich.ucalgary.ca/geomatics">Department of Geometric Engineering</a>
-    </div>
+    <nav class="navbar">
+        <ul class="nav-menu">
+            <li class="dropdown">
+                <a href="https://schulich.ucalgary.ca/" class="nav-item">SCHULICH School of Engineering</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Research</a></li>
+                </ul>
+            </li>
+            <li><a href="https://www.ucalgary.ca/future-students/undergraduate/explore-programs/electrical-engineering" class="nav-item">Electrical Engineering</a></li>
+            <li><a href="https://schulich.ucalgary.ca/chemical-petroleum/home" class="nav-item">Chemical Engineering Department</a></li>
+            <li><a href="https://schulich.ucalgary.ca/biomedical/home" class="nav-item">Biomedical Engineering Department</a></li>
+            <li><a href="https://schulich.ucalgary.ca/geomatics" class="nav-item">Department of Geometric Engineering</a></li>
+        </ul>
+    </nav>
 
      <div class="Container">
         <div class="item">
